tests/js_error/source_locations/statement/for_of/iterator_next.exp
Error: 
  at next (tests/js_error/source_locations/statement/for_of/iterator_next.js:5:15)
  at <global> (tests/js_error/source_locations/statement/for_of/iterator_next.js:11:12)
