tests/js_error/source_locations/statement/for_of/iterator_next.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        throw new Error();
      }
    }
  }
};

for (var x of iterable) {}